@@ -1,3 +1,15 @@
+/*******************************************************************************
+ * Copyright (c) 2024 IBM Corporation and others.
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v1.0
+ * which accompanies this distribution, and is available at
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
+ *
+ * Contributors:
+ *     IBM Corporation - initial API and implementation
+ *******************************************************************************/
 package org.eclipse.jdt.core.tests.compiler.regression;
 
 import org.eclipse.jdt.internal.compiler.classfmt.ClassFileConstants;
@@ -23,8 +35,11 @@ public class UseOfUnderscoreTest extends AbstractBatchCompilerTest {
 		if (options.sourceLevel < ClassFileConstants.JDK9) {
 			message = "'_' should not be used as an identifier, since it is a reserved keyword from source level 1.8 on";
 			errorLevel = "WARNING";
-		} else if (options.sourceLevel < ClassFileConstants.JDK21) {
+		} else if (options.sourceLevel < ClassFileConstants.JDK22) {
 			message = "'_' is a keyword from source level 9 onwards, cannot be used as identifier";
+			errorLevel = "ERROR";
+		} else if (options.sourceLevel == ClassFileConstants.JDK22) {
+			message = "As of release 22, '_' is only allowed to declare unnamed patterns, local variables, exception parameters or lambda parameters";
 			errorLevel = "ERROR";
 		} else {
 			message = "Unnamed Patterns and Variables is a preview feature and disabled by default. Use --enable-preview to enable";
@@ -56,8 +71,11 @@ public class UseOfUnderscoreTest extends AbstractBatchCompilerTest {
 		if (options.sourceLevel < ClassFileConstants.JDK9) {
 			message = "'_' should not be used as an identifier, since it is a reserved keyword from source level 1.8 on";
 			errorLevel = "WARNING";
-		} else if (options.sourceLevel < ClassFileConstants.JDK21) {
+		} else if (options.sourceLevel < ClassFileConstants.JDK22) {
 			message = "'_' is a keyword from source level 9 onwards, cannot be used as identifier";
+			errorLevel = "ERROR";
+		} else if (options.sourceLevel == ClassFileConstants.JDK22) {
+			message = "As of release 22, '_' is only allowed to declare unnamed patterns, local variables, exception parameters or lambda parameters";
 			errorLevel = "ERROR";
 		} else {
 			message =  "Unnamed Patterns and Variables is a preview feature and disabled by default. Use --enable-preview to enable";
@@ -88,8 +106,11 @@ public class UseOfUnderscoreTest extends AbstractBatchCompilerTest {
 		if (options.sourceLevel < ClassFileConstants.JDK9) {
 			message = "'_' should not be used as an identifier, since it is a reserved keyword from source level 1.8 on";
 			errorLevel = "WARNING";
-		} else if (options.sourceLevel < ClassFileConstants.JDK21) {
+		} else if (options.sourceLevel < ClassFileConstants.JDK22) {
 			message = "'_' is a keyword from source level 9 onwards, cannot be used as identifier";
+			errorLevel = "ERROR";
+		} else if (options.sourceLevel == ClassFileConstants.JDK22) {
+			message = "As of release 22, '_' is only allowed to declare unnamed patterns, local variables, exception parameters or lambda parameters";
 			errorLevel = "ERROR";
 		} else {
 			message =  "Unnamed Patterns and Variables is a preview feature and disabled by default. Use --enable-preview to enable";
@@ -122,8 +143,11 @@ public class UseOfUnderscoreTest extends AbstractBatchCompilerTest {
 		if (options.sourceLevel < ClassFileConstants.JDK9) {
 			message = "'_' should not be used as an identifier, since it is a reserved keyword from source level 1.8 on";
 			errorLevel = "WARNING";
-		} else if (options.sourceLevel < ClassFileConstants.JDK21) {
+		} else if (options.sourceLevel < ClassFileConstants.JDK22) {
 			message = "'_' is a keyword from source level 9 onwards, cannot be used as identifier";
+			errorLevel = "ERROR";
+		} else if (options.sourceLevel == ClassFileConstants.JDK22) {
+			message = "As of release 22, '_' is only allowed to declare unnamed patterns, local variables, exception parameters or lambda parameters";
 			errorLevel = "ERROR";
 		} else {
 			message =  "Unnamed Patterns and Variables is a preview feature and disabled by default. Use --enable-preview to enable";
@@ -170,7 +194,7 @@ public class UseOfUnderscoreTest extends AbstractBatchCompilerTest {
 					'_' should not be used as an identifier, since it is a reserved keyword from source level 1.8 on
 					----------
 					""");
-		} else if (options.sourceLevel < ClassFileConstants.JDK21) {
+		} else if (options.sourceLevel < ClassFileConstants.JDK22) {
 			runNegativeTest(new String[] { "A.java", SOURCE_CODE },
 					"""
 					----------
@@ -181,15 +205,8 @@ public class UseOfUnderscoreTest extends AbstractBatchCompilerTest {
 					----------
 					""");
 		} else {
-			runNegativeTest(new String[] { "A.java", SOURCE_CODE },
-					"""
-					----------
-					1. ERROR in A.java (at line 3)
-						int \\u005F = 12;
-						    ^^^^^^
-					Unnamed Patterns and Variables is a preview feature and disabled by default. Use --enable-preview to enable
-					----------
-					""");
+			runConformTest(new String[] { "A.java", SOURCE_CODE },
+					"hello, world");
 		}
 	}
 
